# Starlight

./: .clang-format  .gitignore  Acknowledgments.txt  CMakeLists.txt  LICENSE.txt  README.md
base/: CMakeLists.txt  defines.h  platform.h
base/data_structures/: array.inl  hash.inl  mpmc_queue.h
base/logging/: logger.c  logger.h
base/memory/: allocator.c  allocator.h  mem_tracker.c  mem_tracker.h
base/os/: os.h  os_macos.c  os_win32.c
base/registry/: api_registry.c  api_registry.h  plugin_system.cpp  plugin_system.h  plugin_util.inl
base/thread/: atomics.inl  job_system.c  job_system.h  mutex.inl  spinlock.inl
base/util/: assertions.inl  error.h  path_util.inl  sprintf.c  sprintf.h
docs/: Doxyfile.in
engine/: CMakeLists.txt  main.c  register_engine_apis.c  register_engine_apis.h
plugins/: CMakeLists.txt
plugins/os_window/: CMakeLists.txt  os_window.h  os_window_macos.m  os_window_win32.c
plugins/render_backend/: CMakeLists.txt  render_backend.h
plugins/render_backend_metal/: CMakeLists.txt  metal_availability_macros.h  render_backend_metal.h  render_backend_metal.m  render_backend_metal.mm
plugins/render_backend_vulkan/: CMakeLists.txt  render_backend_vulkan.cpp  render_backend_vulkan.h  render_backend_vulkan_loader.cpp  render_backend_vulkan_loader.h
runtime/: CMakeLists.txt  main.c
tools/: CMakeLists.txt
tools/shader_compiler/: CMakeLists.txt  main.cpp
